@@ -135,6 +135,7 @@ __all__ = [
 ]
 
 import copy as _copy
+import numbers as _numbers
 
 try:
     from collections import namedtuple as _namedtuple
@@ -3653,6 +3654,12 @@ def _dec_from_triple(sign, coefficient, exponent, special=False):
     self._is_special = special
 
     return self
+
+# Register Decimal as a kind of Number (an abstract base class).
+# However, do not register it as Real (because Decimals are not
+# interoperable with floats).
+_numbers.Number.register(Decimal)
+
 
 ##### Context class #######################################################
 
